--- a/index.html
+++ b/index.html
@@ -22,16 +22,23 @@
   --gap: clamp(10px, min(3vw, 2vh), 18px);
 }
 *{ box-sizing:border-box; }
+
 html, body{
-  margin:0; padding:0; height:100%;
-  overflow:auto; overscroll-behavior-y:auto;
+  margin:0;
+  padding:0;
+  height:100%;
+  overflow:auto;
+  overscroll-behavior-y:auto; /* ✅ pull-to-refresh OK */
   background:#000;
   font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
   -webkit-text-size-adjust:100%;
 }
+
+/* Background stable */
 body{
   background:#000 url("background.png") center top / cover no-repeat fixed;
 }
+
 .wrap{
   min-height:100vh;
   min-height:100dvh;
@@ -41,6 +48,7 @@ body{
   align-items:center;
   padding-bottom: calc(env(safe-area-inset-bottom) + 12px);
 }
+
 .title{
   margin-top: calc(env(safe-area-inset-top) + 2px);
   width: min(94vw, 680px);
@@ -53,6 +61,7 @@ body{
   transform: scale(1.25);
   transform-origin: center top;
 }
+
 .grid{
   width: min(94vw, var(--maxw));
   margin-top: clamp(8px, 1.5vh, 16px);
@@ -62,6 +71,7 @@ body{
   justify-items:center;
   align-content:start;
 }
+
 .btn{
   width: var(--btn);
   height: var(--btn);
@@ -69,6 +79,7 @@ body{
   text-decoration:none;
   -webkit-tap-highlight-color:transparent;
 }
+
 .btn img{
   width:100%;
   height:100%;
@@ -78,37 +89,37 @@ body{
 
 /* Login box */
 #loginBox{
-  min-height:100vh;
-  min-height:100dvh;
-  width:100%;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  flex-direction:column;
-  gap:14px;
-  padding:24px;
-  background:rgba(0,0,0,.35);
-  backdrop-filter: blur(2px);
-}
-#loginTitle{
-  color:#fff;
-  font-weight:700;
+  width: min(94vw, 520px);
+  margin-top: calc(env(safe-area-inset-top) + 110px);
   text-align:center;
-  text-shadow:0 2px 10px rgba(0,0,0,.7);
-  line-height:1.2;
-}
-#loginSub{
-  color:#ddd;
-  font-size:14px;
-  text-align:center;
-  max-width:520px;
-}
-#status{
-  color:#ffd;
-  font-size:13px;
-  opacity:.9;
+  padding: 14px;
 }
 
+.loginCard{
+  border-radius: 18px;
+  background: rgba(0,0,0,.55);
+  border: 1px solid rgba(255,255,255,.12);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  padding: 16px 14px;
+}
+
+.loginTitle{
+  margin: 0 0 10px 0;
+  font-weight: 950;
+  letter-spacing: .6px;
+  text-transform: uppercase;
+  color: rgba(255,255,255,.92);
+}
+
+.loginSub{
+  margin: 0 0 14px 0;
+  color: rgba(255,255,255,.72);
+  font-weight: 800;
+  font-size: 13px;
+}
+
+/* Tablettes */
 @media (min-width:768px){
   :root{
     --btn: clamp(110px, 16vw, 180px);
@@ -118,221 +129,139 @@ body{
 }
 </style>
 
-<!-- Google Identity Services -->
 <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 
 <body>
 
 <!-- LOGIN -->
-<div id="loginBox" style="display:none;">
-  <div id="loginTitle">Connexion Google requise</div>
-  <div id="loginSub">Accès réservé aux agents autorisés.</div>
+<div id="loginBox">
+  <div class="loginCard">
+    <h2 class="loginTitle">Accès CS</h2>
+    <p class="loginSub">Connexion Google obligatoire</p>
 
-  <!-- GIS config -->
-  <div id="g_id_onload"
-       data-client_id="690765229829-9bbdccrsm9dd8c1sj01k06bqsdna3hgs.apps.googleusercontent.com"
-       data-callback="handleCredentialResponse"
-       data-auto_prompt="false">
+    <div id="g_id_onload"
+      data-client_id="690765229829-9bbdccrsm9dd8c1sj01k06bqsdna3hgs.apps.googleusercontent.com"
+      data-callback="handleCredentialResponse">
+    </div>
+
+    <div class="g_id_signin"
+      data-type="standard"
+      data-size="large"
+      data-theme="outline"
+      data-text="sign_in_with"
+      data-shape="rectangular">
+    </div>
   </div>
-
-  <div class="g_id_signin"
-       data-type="standard"
-       data-size="large"
-       data-theme="outline"
-       data-text="sign_in_with"
-       data-shape="rectangular">
-  </div>
-
-  <div id="status"></div>
 </div>
 
 <!-- PORTAIL -->
-<main id="portal" class="wrap" style="display:none;">
-
+<main class="wrap" id="portal" style="display:none;">
   <img class="title" src="titre.png" alt="Bienvenue sur CS Consenvoye">
 
-  <section class="grid">
+  <section class="grid" aria-label="Menu">
+    <a class="btn" href="https://nantuko888.github.io/Entretien-CS-Consenvoye-/" target="_self"><img src="entretien.png" alt="Entretien"></a>
+    <a class="btn" href="documents.html"><img src="documents.png" alt="Documents"></a>
 
-    <a class="btn" href="https://nantuko888.github.io/Entretien-CS-Consenvoye-/">
-      <img src="entretien.png" alt="Entretien">
-    </a>
+    <a class="btn" href="organigramme.html"><img src="organigramme.png" alt="Organigramme"></a>
+    <a class="btn" href="construction.png"><img src="informations.png" alt="Informations"></a>
 
-    <a class="btn" href="documents.html">
-      <img src="documents.png" alt="Documents">
-    </a>
+    <a class="btn" href="planning.html"><img src="planning.png" alt="Planning"></a>
+    <a class="btn" href="equipes.html"><img src="equipes.png" alt="Équipes"></a>
 
-    <a class="btn" href="organigramme.html">
-      <img src="organigramme.png" alt="Organigramme">
-    </a>
+    <a class="btn" href="construction.png"><img src="book.png" alt="Book"></a>
+    <a class="btn" href="construction.png"><img src="galerie.png" alt="Galerie"></a>
 
-    <a class="btn" href="construction.png">
-      <img src="informations.png" alt="Informations">
-    </a>
+    <a class="btn" href="construction.png"><img src="admin.png" alt="Admin"></a>
+    <a class="btn" href="construction.png"><img src="gardes postées.png" alt="Gardes postées"></a>
 
-    <a class="btn" href="planning.html">
-      <img src="planning.png" alt="Planning">
-    </a>
-
-    <a class="btn" href="equipes.html">
-      <img src="equipes.png" alt="Équipes">
-    </a>
-
-    <a class="btn" href="construction.png">
-      <img src="book.png" alt="Book">
-    </a>
-
-    <a class="btn" href="construction.png">
-      <img src="galerie.png" alt="Galerie">
-    </a>
-
-    <a class="btn" href="construction.png">
-      <img src="admin.png" alt="Admin">
-    </a>
-
-    <a class="btn" href="construction.png">
-      <img src="gardes postées.png" alt="Gardes postées">
-    </a>
-
-    <a class="btn" href="construction.png">
-      <img src="tickets carburant.png" alt="Tickets carburant">
-    </a>
-
-    <a class="btn" href="construction.png">
-      <img src="désinfection VSAV.png" alt="Désinfection VSAV">
-    </a>
-
+    <a class="btn" href="construction.png"><img src="tickets carburant.png" alt="Tickets carburant"></a>
+    <a class="btn" href="construction.png"><img src="désinfection VSAV.png" alt="Désinfection VSAV"></a>
   </section>
 </main>
 
 <script>
-/* ================== CONFIG ================== */
-const API_BASE = "https://script.google.com/macros/s/AKfycby32Fj3R4WZDasjW1AwRepdfASC_97Nmis8s7ZmYf8bIHmnuJ2rBmECUuQ6u9fQPwgv/exec";
-const AUTH_KEY = "cs_auth_email";
+/*** CONFIG ***/
+const API_BASE = "https://script.google.com/macros/s/AKfycbyOtpcY1OIyDxbbsyaMJHnkeSjzjD54MG1lM7nqAGQzuc_0kmCRNCAFe_2WZUc1xQrL/exec"; // <-- COLLE TON /exec CS ICI
+const STORAGE_KEY = "cs_portail_email";
 
-/* ================== UI ================== */
-const $login = () => document.getElementById("loginBox");
-const $portal = () => document.getElementById("portal");
-const $status = () => document.getElementById("status");
-
-function setStatus(msg){
-  if ($status()) $status().textContent = msg || "";
-}
-function showLogin(msg){
-  $portal().style.display = "none";
-  $login().style.display = "flex";
-  setStatus(msg || "");
-}
+/*** UI ***/
 function showPortal(){
-  $login().style.display = "none";
-  $portal().style.display = "flex";
-  setStatus("");
+  document.getElementById("loginBox").style.display = "none";
+  document.getElementById("portal").style.display = "flex";
+}
+function showLogin(){
+  document.getElementById("portal").style.display = "none";
+  document.getElementById("loginBox").style.display = "block";
 }
 
-/* ================== STORAGE ================== */
-function saveAuth(email){
-  localStorage.setItem(AUTH_KEY, String(email || "").toLowerCase());
-}
-function loadAuth(){
-  return (localStorage.getItem(AUTH_KEY) || "").toLowerCase();
-}
-function clearAuth(){
-  localStorage.removeItem(AUTH_KEY);
-}
-
-/* ================== JSONP PARSER (Apps Script renvoie callback(...)) ================== */
-function parseCallbackText(txt){
-  // txt = callback({...});
-  const cleaned = String(txt || "").replace(/^callback\(/, "").replace(/\);\s*$/, "");
-  return JSON.parse(cleaned);
+/*** JSONP helper ***/
+function jsonp(url, cbName){
+  return new Promise((resolve, reject) => {
+    const s = document.createElement("script");
+    const cleanup = () => {
+      s.remove();
+      try { delete window[cbName]; } catch(e){ window[cbName] = undefined; }
+    };
+    const timer = setTimeout(() => { cleanup(); reject(new Error("Timeout JSONP")); }, 12000);
+    window[cbName] = (data) => { clearTimeout(timer); cleanup(); resolve(data); };
+    s.src = url;
+    s.onerror = () => { clearTimeout(timer); cleanup(); reject(new Error("Erreur JSONP")); };
+    document.head.appendChild(s);
+  });
 }
 
-/* ================== AUTH CHECK (anti-boucle) ================== */
-let checking = false;
-
-function authCheck(email){
-  const e = encodeURIComponent(email || "");
-  // IMPORTANT : on passe bien ?email=
-  const url = `${API_BASE}?view=auth_check&email=${e}&callback=callback&nocache=1`;
-
-  // on lit en text puis parse callback(...)
-  return fetch(url, { cache: "no-store" })
-    .then(r => r.text())
-    .then(parseCallbackText);
+/*** Check whitelist (NO CACHE) ***/
+async function authCheck(email){
+  const cb = "cb_auth_" + Math.random().toString(36).slice(2);
+  const url = `${API_BASE}?view=auth_check&email=${encodeURIComponent(email)}&nocache=1&callback=${cb}`;
+  return await jsonp(url, cb);
 }
 
-/* ================== GOOGLE SIGN-IN CALLBACK ================== */
-function handleCredentialResponse(response){
+/*** Decode JWT email ***/
+function jwtEmail(credential){
+  const payload = credential.split('.')[1].replace(/-/g, '+').replace(/_/g, '/');
+  const data = JSON.parse(decodeURIComponent(escape(atob(payload))));
+  return String(data.email || "").trim().toLowerCase();
+}
+
+/*** Google callback ***/
+async function handleCredentialResponse(response) {
   try{
-    if(!response || !response.credential){
-      showLogin("Erreur: pas de jeton Google.");
-      return;
-    }
+    const email = jwtEmail(response.credential);
+    if(!email){ alert("Email introuvable"); return; }
 
-    // Décodage JWT (payload)
-    const payload = response.credential.split(".")[1]
-      .replace(/-/g, "+")
-      .replace(/_/g, "/");
-    const json = JSON.parse(decodeURIComponent(escape(atob(payload))));
-    const email = (json.email || "").toLowerCase();
-
-    if(!email){
-      showLogin("Impossible de lire l'email Google.");
-      return;
-    }
-
-    setStatus("Vérification de l'accès…");
-
-    authCheck(email).then(res => {
-      if(res && res.ok){
-        saveAuth(email); // reste connecté illimité (sur l’appareil)
-        showPortal();
-      }else{
-        clearAuth();
-        showLogin("Accès refusé.");
-      }
-    }).catch(err => {
-      console.error(err);
-      showLogin("Erreur de connexion (API).");
-    });
-
-  }catch(e){
-    console.error(e);
-    showLogin("Erreur de traitement.");
-  }
-}
-
-/* ================== BOOT ================== */
-window.addEventListener("load", () => {
-  const saved = loadAuth();
-
-  if(!saved){
-    // pas d'email sauvegardé -> login
-    showLogin("");
-    return;
-  }
-
-  // email sauvegardé -> revalide une seule fois (anti-boucle)
-  if(checking) return;
-  checking = true;
-
-  showLogin("Vérification en cours…");
-
-  authCheck(saved).then(res => {
-    checking = false;
+    const res = await authCheck(email);
     if(res && res.ok){
+      localStorage.setItem(STORAGE_KEY, email);
       showPortal();
     }else{
-      clearAuth();
-      showLogin("Accès refusé.");
+      localStorage.removeItem(STORAGE_KEY);
+      alert("Accès refusé");
+      showLogin();
     }
-  }).catch(err => {
-    checking = false;
+  }catch(err){
     console.error(err);
-    // si API KO, on revient au login (pas de boucle)
-    showLogin("Erreur de connexion (API).");
-  });
-});
+    alert("Erreur de connexion");
+    showLogin();
+  }
+}
+
+/*** Boot: recheck saved email on every open (cuts access immediately if removed) ***/
+(async function(){
+  showLogin();
+  const saved = String(localStorage.getItem(STORAGE_KEY) || "").trim().toLowerCase();
+  if(saved){
+    try{
+      const res = await authCheck(saved);
+      if(res && res.ok){
+        showPortal();
+        return;
+      }
+    }catch(e){}
+    localStorage.removeItem(STORAGE_KEY);
+  }
+})();
 </script>
 
 </body>
